Comit cho pull code